--- a/LM6800-LCM-51/.project
+++ b/LM6800-LCM-51/.project
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/lcd/Debug}</value>
+					<value>${workspace_loc:/lcd}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
