--- a/asp-skyeye/sample1.cfg
+++ b/asp-skyeye/sample1.cfg
@@ -3,7 +3,7 @@
  */
 
 /*
- *  е╡еєе╫еые╫еэе░ещер(1)д╬е╖е╣е╞ере│еєе╒егеоехеьб╝е╖ечеєе╒ебедеы
+ *  цЙФф╗╢чЪ┐ф╝ЩчЪ┐ф╝Хх╝Шф╗┐ф╕Ю(1)хПКцЙСцЧжц░╛ф╕ЮцИКф╗╢чЩ╜хе┤х╣╝ф║Щф╝КтЦбцЙСф║жф╗╢чЩ╜хдохе╢ф╝Щ
  */
 INCLUDE("target_timer.cfg");
 INCLUDE("syssvc/syslog.cfg");
